toast z index issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,6 @@ body {
   display: none;
 }
 
-input:focus {
-  font-size: 16px; /* Prevents zooming */
-}
-
 input:-webkit-autofill::first-line {
   font-family: 'FKGrotesk', sans-serif;
   font-size: 12px;
@@ -48,6 +44,12 @@ input:-webkit-autofill:focus {
   -webkit-text-fill-color: #E4E4E4;
   -webkit-box-shadow: 0 0 0px 1000px transparent inset;
   transition: background-color 5000s ease-in-out 0s;
+}
+
+.my-toast {
+  z-index: 10001 !important;
+  position: relative;
+  font-size: 16px !important;
 }
 
 .my-toast-description {
